# Latte-compiler

./: Espresso.cabal  stack.yaml
app/: Main.hs
examples/: e00.lat  e01.lat  e02.lat
src/: AST.hs  ASTOptimizations.hs  CompileError.hs  CompilePasses.hs  GenerateSSA.hs  Lexer.x  Parser.y  RenameUnique.hs  SpecialFunctions.hs  StaticChecks.hs  TypeCheck.hs  Utility.hs
src/ASTOptimizations/: ConstantFolding.hs  DeadCodeElimination.hs
src/CodeGen/: Assembly.hs  AssemblyFormatters.hs  Dumb.hs
src/CodeGen/AssemblyFormatters/: Gas.hs  Nasm.hs
stdlib/: lib.c
test/: ExternalTests.hs  Spec.hs
test_cases/bad/: for_loop_type_mismatch.lat  struct_duplicate_members.lat  struct_multiple_definitions.lat  undefined_type1.lat  undefined_type2.lat  undefined_type3.lat
test_cases/fail/: array_negative_out_of_bounds.lat  array_negative_size.lat  array_out_of_bounds.lat
test_cases/good/: .many_parameters.lat.swp  .multidimensional_arrays.lat.swp  arrays_null.lat  boolean_eagerness.lat  boolean_eagerness.output  for_loop.lat  many_parameters.lat  multidimensional_arrays.lat  multidimensional_arrays.output  parameter_assigning.lat  parameter_assigning.output  parameter_swizzling.lat  parameter_swizzling.output  structs_basic.lat  structs_comparison.lat  structs_null.lat  structs_recursive.lat  structs_recursive.output
