name:                Espresso
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Espresso#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  src/Lexer.x
                     src/Parser.y
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CompilePasses
                     , CompileError
                     , AST
  other-modules:       Lexer
                     , Parser
                     , TypeCheck
                     , Utility
                     , GenerateSSA
                     , SpecialFunctions
                     , CodeGen.Assembly
                     , CodeGen.AssemblyFormatters
                     , CodeGen.AssemblyFormatters.Gas
                     , CodeGen.AssemblyFormatters.Nasm
                     , CodeGen.Dumb
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , array
                     , containers
                     , syb
                     , transformers
  default-language:    Haskell2010

executable Espresso-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Espresso
  default-language:    Haskell2010

test-suite Espresso-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base 
                     , hspec
                     , containers
                     , QuickCheck
                     , Espresso
                     , syb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Espresso
